// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spacing /> should render the component with all properties as true 1`] = `
<SpacingBlockStyled
  bottom={true}
  inline={true}
  left={true}
  right={true}
  top={true}
  type="margin"
>
  <Button
    actionType="default"
    active={false}
    disabled={false}
    elementType="button"
    href=""
    size="default"
    stretch={false}
  >
    Awesome Button
  </Button>
</SpacingBlockStyled>
`;

exports[`<Spacing /> should render the component with padding instead of margin 1`] = `
<SpacingBlockStyled
  type="padding"
>
  <Button
    actionType="default"
    active={false}
    disabled={false}
    elementType="button"
    href=""
    size="default"
    stretch={false}
  >
    Awesome Button
  </Button>
</SpacingBlockStyled>
`;

exports[`<Spacing /> should render the component with the default props 1`] = `
<SpacingBlockStyled
  type="margin"
>
  <Button
    actionType="default"
    active={false}
    disabled={false}
    elementType="button"
    href=""
    size="default"
    stretch={false}
  >
    Awesome Button
  </Button>
</SpacingBlockStyled>
`;
